<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._.Activity.EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/tv_mn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/mobilenumber"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_mn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/tv_ed"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_ed"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/tv_spln"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/specialiazation"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_spln"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint=""/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_experience"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/experience"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_experience"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint=""/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint=""/>
        </LinearLayout>

</LinearLayout>


<View
    android:layout_width="match_parent"
    android:layout_height="5dp"
    android:layout_above="@+id/btn_save"
    android:background="@drawable/dottedlines"
    android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape"
        android:textColor="@color/purewhite"
        android:layout_below="@+id/et_password"/>



</RelativeLayout>