<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purewhite"
        android:padding="@dimen/twelve_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/fifteen_dp"
            android:paddingRight="@dimen/fifteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/new_patient_title"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/et_name"
                    style="@style/new_patient_value"
                    android:hint="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/new_patient_title"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/new_patient_value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_dob"
                    style="@style/new_patient_title"
                    android:text="@string/dateofbirth" />

                <EditText
                    android:id="@+id/et_dob"
                    style="@style/new_patient_value"
                    android:drawableRight="@drawable/ic_action_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_mn"
                    style="@style/new_patient_title"
                    android:text="@string/mobilenumber" />

                <EditText
                    android:id="@+id/et_mn"
                    style="@style/new_patient_value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/new_patient_title"
                    android:text="@string/gender" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/male"
                        android:textColor="@color/black_shade_1"
                        android:textSize="13sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/female"
                        android:textColor="@color/black_shade_1"
                        android:textSize="13sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/other"
                        android:textColor="@color/black_shade_1"
                        android:textSize="13sp" />

                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_marital_status"
                    style="@style/new_patient_title"
                    android:text="@string/marital_status" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center|left">

                    <Spinner
                        android:id="@+id/spnr_marital_status"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/three_dp"
                        android:background="@drawable/marital_spinner_bg"
                        android:dropDownVerticalOffset="45dp"
                        android:popupBackground="@drawable/dropdown_popup"
                        android:spinnerMode="dropdown"
                        android:layout_margin="1dp"/>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center|left"
                    android:text="@string/address"
                    android:textColor="@color/black_shade_1"
                    android:textSize="@dimen/sixteen_sp" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="@dimen/five_dp"
                    android:background="@drawable/edit_text_bg"
                    android:fontFamily="@font/roboto_regular"
                    android:padding="@dimen/eight_dp"
                    android:textColor="@color/black_shade_1"
                    android:textCursorDrawable="@drawable/text_cursor_color"
                    android:textSize="@dimen/sixteen_sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_t_o_d"
                    style="@style/new_patient_title"
                    android:text="@string/t_o_d" />

                <EditText
                    android:id="@+id/et_t_o_d"
                    style="@style/new_patient_value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_follow_update"
                    style="@style/new_patient_title"
                    android:text="@string/fw_up" />

                <EditText
                    android:id="@+id/et_follow_update"
                    style="@style/new_patient_value"
                    android:drawableRight="@drawable/ic_action_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_doc_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_upload_doc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/upload_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="Uploading documents"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_capture_prescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/img_camera"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/camera_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="Capture Prescription"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/fourteen_sp" />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_doc_patient"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/purewhite"
                android:textSize="@dimen/eighteen_dp" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
