<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/purewhite"
    app:cardCornerRadius="@dimen/five_dp"
    app:cardElevation="@dimen/ten_dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purewhite"
        android:orientation="vertical"
        android:padding="@dimen/eight_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_email"
                style="@style/personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/email" />

            <TextView
                android:id="@+id/tv_emailVal"
                style="@style/personal_info_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dob"
                style="@style/personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dateofbirth" />

            <TextView
                android:id="@+id/tv_dobVal"
                style="@style/personal_info_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_mn"
                style="@style/personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mobilenumber" />

            <TextView
                android:id="@+id/tv_mobileNumberVal"
                style="@style/personal_info_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_gender"
                style="@style/personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/tv_genderVal"
                style="@style/personal_info_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_marital_status"
                style="@style/personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/marital_status" />

            <TextView
                android:id="@+id/tv_maritalStatusVal"
                style="@style/personal_info_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_patients_age"
                style="@style/personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/patient_age" />

            <TextView
                android:id="@+id/tv_patientsAgeVal"
                style="@style/personal_info_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_address"
                style="@style/personal_info_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/address" />

            <TextView
                android:id="@+id/tv_addressVal"
                style="@style/personal_info_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/dottedlines" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="@dimen/five_dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ll_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_edit" />

                <TextView
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="@dimen/five_dp"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@color/purewhite"
                    android:textSize="@dimen/eighteen_sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.cardview.widget.CardView>