<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purewhite"
    android:padding="@dimen/ten_dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/pwd_reset_done" />

    <TextView
        android:id="@+id/tv_congo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="@color/heading_purple"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/info_congo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_congo"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/cong_info"
        android:textSize="16sp"
        android:textColor="@color/black_et_txt_clr"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_congo"
        android:orientation="vertical"
        android:paddingLeft="@dimen/ten_dp"
        android:paddingTop="@dimen/tweenty_dp"
        android:paddingRight="@dimen/ten_dp"
        android:paddingBottom="@dimen/tweenty_dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="14dp"
            app:cardElevation="@dimen/five_dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/purewhite"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="normal" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>